--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -1,26 +1,19 @@
 <div>
   <div>
-    <div class="center">
-      <div>{{ titlePage }}</div>
-    </div>
+    <app-page-header [title]="titlePage"></app-page-header>
     <div class="split">
-      <div>
-        <p>Number of entries</p>
-        <p>{{ totalEntries }}</p>
-      </div>
-      <div>
-        <p>Total Number of medals</p>
-        <p>{{ totalMedals }}</p>
-      </div>
-      <div>
-        <p>Total Number of athletes</p>
-        <p>{{ totalAthletes }}</p>
-      </div>
+      <app-stat-card label="Number of entries" [value]="totalEntries"></app-stat-card>
+      <app-stat-card label="Total Number of medals" [value]="totalMedals"></app-stat-card>
+      <app-stat-card label="Total Number of athletes" [value]="totalAthletes"></app-stat-card>
     </div>
   </div>
   <div class="chart-container wrapper-container">
     <div class="container">
-      <canvas id="countryChart">{{ lineChart }}</canvas>
+      <app-line-chart 
+        [years]="years" 
+        [medalsData]="medalsData" 
+        chartId="countryChart">
+      </app-line-chart>
       <h2>Date</h2>
     </div>
   </div>
