--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,10 +1,3 @@
-@import '../../../variables';
+// Styles déplacés dans page-stats-header.component.scss
 
-.split {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: $spacing-large;
-  margin: $spacing-small;
-}
 
