--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -1,12 +1,9 @@
 <div>
-  <div>
-    <app-page-header [title]="titlePage"></app-page-header>
-    <div class="split">
-      <app-stat-card label="Number of entries" [value]="totalEntries"></app-stat-card>
-      <app-stat-card label="Total Number of medals" [value]="totalMedals"></app-stat-card>
-      <app-stat-card label="Total Number of athletes" [value]="totalAthletes"></app-stat-card>
-    </div>
-  </div>
+  <app-page-stats-header 
+    [title]="titlePage" 
+    [statistics]="statistics">
+  </app-page-stats-header>
+  
   <div class="chart-container wrapper-container">
     <div class="container">
       <app-line-chart 
