dev: ajout d'un loading state et finalisation des détails

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -13,4 +13,6 @@ $spacing-large: 20px;
 $border-radius: 10px;
 
 // Breakpoints
-$breakpoint-mobile: 1000px;
+$breakpoint-mobile: 767px;
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1200px;
