--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'variables';
 
 /* Global reset and base styles */
 * {
@@ -9,4 +10,36 @@ body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+}
+
+canvas {
+  display: block;
+  width: 100%;
+  margin-inline: auto;
+}
+
+/* Global container class - reusable across pages */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: $spacing-medium;
+
+  h2 {
+    text-align: center;
+    color: $text-color-dark;
+    margin-bottom: $spacing-small;
+  }
+
+  hr {
+    border: none;
+    border-top: 2px solid $primary-color;
+    margin-bottom: $spacing-large;
+  }
+}
+
+/* Responsive adjustments for global container */
+@media screen and (max-width: $breakpoint-mobile) {
+  .container {
+    padding: $spacing-small;
+  }
 }
