--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -22,6 +22,22 @@
 
 // Responsive design
 @media screen and (max-width: $breakpoint-mobile) {
+  .error-container {
+    padding: $spacing-medium;
+    
+    .error-icon {
+      font-size: 48px;
+    }
+    
+    .error-title {
+      font-size: 24px;
+    }
+    
+    .error-message {
+      font-size: 14px;
+    }
+  }
+
   .intro-section {
     margin-bottom: $spacing-medium;
 
