--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,10 +12,17 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
 }
 
-canvas {
+:host {
   display: block;
   width: 100%;
-  margin-inline: auto;
+  max-width: 100%;
+  position: relative;
+}
+
+canvas {
+  display: block;
+  max-width: 100%;
+  height: auto !important;
 }
 
 /* Global container class - reusable across pages */
